fix: alignment

--- a/badges/badge.css
+++ b/badges/badge.css
@@ -47,7 +47,7 @@
     flex-direction: column;
     max-width: 82%;
     position: relative;
-    padding-left: 19rem;
+   
 
 }
 
